Add basic localStorage support

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>LocaTier</title>
 </head>
 <body>
+  <header>
+    <button onclick="saveState()">Save</button>
+    <button onclick="loadState()">Load</button>
+  </header>
   <main>
     <section id="tierlist">
       <div id="tier-S" class="tier">
