Add JSDoc and refactor state management

--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>LocaTier</title>
 </head>
+
 <body>
   <main>
-    <section id="tierlist">
-      <div id="tier-S" class="tier">
-      </div>
-      <div id="tier-A" class="tier"></div>
-      <div id="tier-B" class="tier">
-      </div>
-      <div id="tier-C" class="tier"></div>
-      <div id="tier-D" class="tier"></div>
-      <div id="tier-E" class="tier"></div>
-      <div id="tier-F" class="tier"></div>
-    </section>
+    <section id="tierlist"></section>
     <hr>
-    <section id="tray">
-      <div class="tier"></div>
-    </section>
-
+    <section id="tray"></section>
   </main>
 </body>
+
 <script src="utils.js"></script>
+<script src="ui.js"></script>
 <script src="main.js"></script>
+
 </html>
