Add reset button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+  <header>
+    <button onclick="resetState()">Reset</button>
+  </header>
   <main>
     <section id="tierlist"></section>
     <hr>
