Introduce clear & reset actions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <header>
+    <button onclick="clearState()">Clear</button>
     <button onclick="resetState()">Reset</button>
   </header>
   <main>
