Add place to trash images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <header>
     <button onclick="clearState()">Clear</button>
     <button onclick="resetState()">Reset</button>
+    <div class="spacer"></div>
+    <section id="trash"></section>
   </header>
+  <hr>
   <main>
     <section id="tierlist"></section>
     <hr>
